# mollygraph

./: .env.example  .gitignore  BACKLOG.md  BLIND_SPOTS.md  CONTRIBUTING.md  NEW_GAPS.md  README.md  SKILL.md  docker-compose.neo4j.yml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
archive/: setup_v2.sh
docs/: ARCHITECTURE.md  DOCS_MAP.md  PRODUCTION_TEST_CHECKLIST.md
scripts/: install.sh  production_smoke.py  start.sh
scripts/lib/: env.sh
sdk/: README.md  pyproject.toml
sdk/mollygraph_sdk/: __init__.py  client.py  mcp_proxy.py
service/: .env.example  AUDIT_ARCHITECT.md  AUDIT_DEVELOPER.md  AUDIT_PM.md  AUDIT_QA.md  BACKLOG.md  DECISION_TRACES_PLAN.md  ENRICHMENT_REGISTRY_DESIGN.md  GRAPHITI_STYLE_SPEC.md  OVERNIGHT_EXEC_REPORT.md  OVERNIGHT_REVIEW_REPORT.md  README.md  config.py  embedding_registry.py  extractor_registry.py  extractor_schema_registry.py  main.py  mcp_server.py  runtime_graph.py  runtime_pipeline.py  runtime_queue.py  runtime_state.py  runtime_vector_store.py
service/api/: admin.py  decisions.py  deps.py  ingest.py  query.py
service/audit/: llm_audit.py  signals.py
service/evolution/: audit_feedback.py  contact_training.py  gliner_training.py
service/extraction/: decision_traces.py  gliner_training.py  glirel_enrichment.py  glirel_synonyms.py  pipeline.py  queue.py  relation_gate.py
service/maintenance/: auditor.py  infra_health.py  lock.py
tests/: conftest.py  test_api_contract.py  test_basic.py  test_glirel_enrichment.py  test_local_runtime_scripts.py  test_production_smoke.py  test_training_feedback.py
(+59 files in other folders)
