[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mollygraph-sdk"
version = "0.1.0"
description = "Thin Python SDK for MollyGraph HTTP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28,<0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mollygraph_sdk*"]
