[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mollygraph-sdk"
version = "1.0.0"
description = "Python SDK and MCP adapter for MollyGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28,<0.29",
]

[project.optional-dependencies]
mcp = [
  "mcp",
]

[project.scripts]
mollygraph-mcp = "mollygraph_sdk.mcp_proxy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mollygraph_sdk*"]
